--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
   -->
   <script src="resources/bower/angular/angular.js"></script>
   <script src="resources/bower/angular-route/angular-route.min.js"></script>
-  <script src="appComm.js"></script>
+  <script src="app.js"></script>
   
   <script src="common/CommunicationManager.js"></script>
   <script src="common/ServiceCommunication.js"></script>
