--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="resources/css/app.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <base href="/app/">
+  <base href="/CommunicationStrategyInAngularJS/">
 
 </head>
 <body>
