--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="resources/css/app.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <base href="/leili/CommunicationStrategyInAngularJS/app/">
-  <!-- <base href="/"> --> 
+  <!--coolshare:   <base href="/leili/CommunicationStrategyInAngularJS/app/">   --> 
+  <base href="/CommunicationStrategyInAngularJS/app/"> 
+  <!--localhost: <base href="/"> --> 
 </head>
 <body>
   <ul class="menu">
