--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html lang="en" ng-app="mostPopularListingsApp" class="no-js"><!--<![endif]-->
+<html lang="en" ng-app="communicationStrategyApp" class="no-js"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="resources/css/app.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!--coolshare:   <base href="/leili/CommunicationStrategyInAngularJS/app/">   --> 
-  <base href="/CommunicationStrategyInAngularJS/app/"> 
+  <!--github:   <base href="/CommunicationStrategyInAngularJS/app/">   --> 
   <!--localhost: <base href="/"> --> 
 </head>
 <body>
