--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="resources/css/app.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!--coolshare:   <base href="/leili/CommunicationStrategyInAngularJS/app/">   --> 
-  <!--github:   <base href="/CommunicationStrategyInAngularJS/app/">   --> 
+  <base href="/CommunicationStrategyInAngularJS/app/">
   <!--localhost: <base href="/"> --> 
 </head>
 <body>
