--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/test">Test</a></li>
+    <li><a href="#/test">Communication Demo</a></li>
   </ul>
 
   <!--[if lt IE 7]>
