--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
   <ul class="menu">
+    <li><a href="#/about">About Communication Demo</a></li>
     <li><a href="#/test">Communication Demo</a></li>
   </ul>
 
