--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/about">About Communication Demo</a></li>
-    <li><a href="#/test">Communication Demo</a></li>
+    <li><a href="#/about">About</a></li>
+    <li><a href="#/test">Demo</a></li>
   </ul>
 
   <!--[if lt IE 7]>
